tests/parsing/width_range_conflict/stderr.golden
error: cannot set 'range' property, because 'width' property is already set in line 3 column 5
bus.fbd +4:5
   |
 4 |     range = [0, 10]
   |     ^^^^^
bus.fbd +3:5
   |
 3 |     width = 2
   |     ^^^^^
